--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Modular JavaScript cross interpreter",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "bundle": "browserify index.js -t [ babelify --presets [ es2015 ] ] -o bundle.js"
   },
   "author": "Heilig Benedek",
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "fs-extra": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2016": "^6.16.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1"
   }
 }
